--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,8 +24,19 @@ h6 {
   font-weight: bold;
 }
 
+h1 {
+font-size: 96px;
+line-height: 1.5;
+}
+
+h2 {
+font-size:64px ;
+}
+
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .hero {
@@ -49,19 +60,42 @@ p {
 }
 
 .btn-branding {
-  background: #6c63ff;
-  border-radius: 4px;
-  color: white;
-  font-size: 10px;
-  line-height: 27px;
-  padding: 12px 20px;
-}
-
-.btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px; 
+  padding: 15px 30px;
+  
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 900px) {
+  h1{
+font-size: 44px;
+line-height: 1.5;
+  }
+h2 {
+  font-size: 44px;
+}
+.hero {
+  padding: 80px 20px;
+}
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
